# polytrader

./: .gitignore  404.html  LICENSE  Makefile  README.md  code_formatter.sh  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: getting-started.md  index.md
docs/guide/: binance.md  client.md  errors.md  on-chain.md  websockets.md
getting-started/: index.html
guide/binance/: index.html
guide/client/: index.html
guide/errors/: index.html
guide/on-chain/: index.html
guide/websockets/: index.html
reference/SUMMARY/: index.html
reference/polytrader/: index.html
reference/polytrader/binance/: index.html
reference/polytrader/client/: index.html
reference/polytrader/constants/: index.html
reference/polytrader/exceptions/: index.html
reference/polytrader/models/: index.html
reference/polytrader/rpc/: index.html
reference/polytrader/websocket/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/polymarket/: __init__.py  client.py  websocket.py
src/polytrader/: __init__.py  binance.py  client.py  constants.py  exceptions.py  models.py  rpc.py  websocket.py
src/polytrader/models/: __init__.py  _auth.py  _binance.py  _client.py  _enums.py  _helpers.py  _market.py  _user.py
tests/: conftest.py  test_binance_ws.py  test_client.py  test_orders.py  test_websocket.py
tests/cassettes/test_client/: test_get_balance.yaml  (+4 more)
tests/fixtures/: binance_ws_messages.jsonl  market_ws_messages.jsonl  user_ws_messages.jsonl
(+8 files in other folders)
