[project]
name = "polytrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.5",
]
