[project]
name = "polytrader"
version = "0.1.2"
description = "Python trading client for Polymarket"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Omid Roshani" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "eth-abi>=5.0.0",
    "eth-account>=0.13.0",
    "eth-utils>=5.0.0",
    "httpx>=0.28.1",
    "py-builder-relayer-client>=0.0.1",
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/omidroshani/polytrader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "ruff>=0.15.5",
    "freezegun>=1.5.0",
]
